Fixed z-index on gallery buttons, they where appearing above the open mobile nav

--- a/assets/styles/components/_buttons.scss
+++ b/assets/styles/components/_buttons.scss
@@ -27,7 +27,7 @@
     margin: auto;
     width: 60px;
     height: 60px;
-    z-index: 999;
+    z-index: 101;
     background-color: rgba(255,255,255,0.8);
     font-size: 40px;
     color: #000;
